--- a/pybo/templates/question/rating_detail.html
+++ b/pybo/templates/question/rating_detail.html
@@ -55,35 +55,24 @@
                             <div>{{ question.create_date|datetime }}</div>
                         </div>
                     </div>
-                    {% if g.user == question.user %}
-                    <div class="my-3">
-                        <a href="#" class="delete btn btn-sm btn-outline-secondary"
-                           data-uri="{{ url_for('question.delete', question_id=question.id) }}">삭제</a>
-                    </div>
-                    {% endif %}
-                    <!-- 질문 댓글 Start -->
-                    {% if question.comment_set|length > 0 %}
-                    <div class="mt-3">
-                    {% for comment in question.comment_set %}
-                        <a name="comment_{{ comment.id }}"></a>
-                        <div class="comment py-2 text-muted">
-                            <span style="white-space: pre-line;">{{ comment.content }}</span>
-                            <span>
-                                - {{ comment.user.username }}, {{ comment.create_date|datetime }}
-                                {% if comment.modify_date %}
-                                (수정:{{ comment.modify_date|datetime }})
-                                {% endif %}
-                            </span>
-                            {% if g.user == comment.user %}
-                            <a href="{{ url_for('comment.modify_question', comment_id=comment.id) }}" class="small">수정</a>,
-                            <a href="#" class="small delete"
-                               data-uri="{{ url_for('comment.delete_question', comment_id=comment.id) }}">삭제</a>
-                            {% endif %}
+                    <div class="d-flex justify-content-between my-2">
+                        <div class="my-1">
+                            <ul class="list-group list-group-horizontal" >
+                                <li><i class="fas fa-solid fa-thumbs-up  "  style="color: #ffa300"> {{ question.voter|length }}</i></li>
+                              <li><i class="fas fa-solid fa-comment px-4" style="color: #ffde55;"> {{ question.answer_set|length }}</i></li>
+
+                            </ul>
                         </div>
-                    {% endfor %}
+                        <div class="my-1">
+                        {% if g.user != question.user %}
+                            <a href="{{ url_for('vote.question', question_id=question.id) }}"
+                               class="recommend btn btn-warning" style="background-color: #ffc009; color:white">추천</a>
+                        {% else %}
+                            <a href="#" class="delete btn btn-sm btn-outline-secondary"
+                               data-uri="{{ url_for('question.delete', question_id=question.id) }}">삭제</a>
+                        {% endif %}
+                        </div>
                     </div>
-                    {% endif %}
-                    <!-- 질문 댓글 End -->
                 </div>
             </div>
         </div>
@@ -113,14 +102,33 @@
                             <div>{{ answer.create_date|datetime }}</div>
                         </div>
                     </div>
-                    {% if g.user == answer.user %}
-                    <div class="my-3">
-                        <a href="{{ url_for('answer.modify', answer_id=answer.id) }}"
-                            class="btn btn-sm btn-outline-secondary">수정</a>
-                        <a href="#" class="delete btn btn-sm btn-outline-secondary "
-                            data-uri="{{ url_for('answer.delete', answer_id=answer.id) }}">삭제</a>
+                    <div class="d-flex justify-content-between my-2">
+                        <div class="my-1">
+                            <ul class="list-group list-group-horizontal" >
+                                <li><i class="fas fa-solid fa-thumbs-up "  style="color: #ffa300"> {{ answer.voter|length }}</i></li>
+                              <li><i class="fas fa-solid fa-comments px-4 " style="color: #ffde55;"> {{ answer.comment_set|length }}</i></li>
+
+                            </ul>
+                        </div>
+                        <div class="my-1">
+                        <a href="{{ url_for('comment.create_answer', answer_id=answer.id) }}"
+                           class="small px-2"><small>대댓글 추가 ..</small></a>
+                        {% if question.is_favor == True and question.favor_set[0].resolve_answer_id == answer.id %}
+                            <div class="badge badge-warning text-center" style="vertical-align: middle; width: 65px; background-color: #ffa300">
+                                    <div class="my-2" >채택됨</div>
+                             </div>
+                        {% endif %}
+                        {% if g.user != answer.user %}
+                        <a href="{{ url_for('vote.answer', answer_id=answer.id) }}"
+                               class="recommend btn btn-warning" style="background-color: #ffc009; color:white">추천</a>
+                        {% else %}
+                            <a href="{{ url_for('answer.modify', answer_id=answer.id) }}"
+                                class="btn btn-sm btn-outline-secondary">수정</a>
+                            <a href="#" class="delete btn btn-sm btn-outline-secondary "
+                                data-uri="{{ url_for('answer.delete', answer_id=answer.id) }}">삭제</a>
+                        {% endif %}
+                        </div>
                     </div>
-                    {% endif %}
                     <!-- 답변 댓글 Start -->
                     {% if answer.comment_set|length > 0 %}
                     <div class="mt-3">
@@ -143,10 +151,6 @@
                     {% endfor %}
                     </div>
                     {% endif %}
-                    <div>
-                        <a href="{{ url_for('comment.create_answer', answer_id=answer.id) }}"
-                           class="small"><small>대댓글 추가 ..</small></a>
-                    </div>
                     <!-- 답변 댓글 End -->
                 </div>
             </div>
