--- a/pybo/templates/navbar.html
+++ b/pybo/templates/navbar.html
@@ -54,6 +54,14 @@
                          </ul>
                       </div>
                     </div>
+                      <div class="row pt-2">
+                      <div class="col-6">
+                        <span>품앗이</span>
+                         <ul class="px-3 categories">
+                           <li><a href="{{ url_for('question.classify', category='favor') }}" >품앗이</a></li>
+                         </ul>
+                      </div>
+                    </div>
                     <div class="row pt-2">
                       <div class="col-6">
                         <span>게시판</span>
@@ -82,14 +90,11 @@
                       </button>
                       <div class="dropdown-menu dropdown-menu-right py-0" aria-labelledby="dropdownMenuButton">
                         <ul class="list-group list-group-horizontal px-4 pt-3 border-bottom pb-3">
-                          <li><a href="#"><i class="far fa-bookmark px-3 text-muted"></i></a></li>
-                          <li><a href="#"><i class="far fa-comment-alt px-3 text-muted"></i></a></li>
-                          <li><a href="#"><i class="fas fa-wrench px-3 text-muted"></i></a></li>
-                          <li><a href="#"><i class="fas fa-sign-out-alt px-3 text-muted"></i></a></li>
+                          <li><a href="{{ url_for('mypage.mypage') }}"><i class="far fa-comment-alt px-3 text-muted"></i></a></li>
+                          <li><a href="{{ url_for('auth.logout') }}"><i class="fas fa-sign-out-alt px-3 text-muted"></i></a></li>
                         </ul>
                         <ul class="mb-0 pl-0 py-3">
                           <li><a href="{{ url_for('mypage.mypage') }}"><p class="mb-1">마이페이지</p></a></li>
-                          <li><a href="#"><p class="mb-1">뱃지</p></a></li>
                         </ul>
                       </div>
                     </div>
