margin at question_detail category

--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -7,7 +7,7 @@
     </div>
     {% endfor %}
     <div class="row border-bottom py-2 mb-3 pl-2">
-        <h3  style="display: inline ; margin:0;">{{ question.subject }}</h3>
+        <h3  style="display: inline ; margin:0;" class="pb-3">{{ question.subject }}</h3>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <span class="badge badge-pill py-2 center-block p-2 bb-4"  style="min-width: 100px; height:30px; background-color: #cccccc; vertical-align: center">
             {{category}}
